--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/master.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <title>wvwall_SpotifyWeb</title>
 </head>
 <body>
-    
+    <aside>
+        <section>
+         <img src="./assets/img/logo_spotify.png" alt="logo esteso">
+        </section>
+    </aside>
+    <main>
+        <section>
+            <div class="main-top">
+                <button class="upgrade uppercase">effettua l'upgrade</button>
+            </div>
+        </section>
+       
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
