--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/master.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
@@ -10,19 +12,25 @@
     <title>wvwall_SpotifyWeb</title>
 </head>
 <body>
+    <!-- NAVBAR -->
     <aside>
         <section>
          <img src="./assets/img/logo_spotify.png" alt="logo esteso">
         </section>
     </aside>
+
+    <!-- MAIN -->
     <main>
-        <section>
+        <section class="main-top-fixed">
             <div class="main-top">
                 <button class="upgrade uppercase">effettua l'upgrade</button>
             </div>
         </section>
-       
+        <section class="prova">
+            <div></div>
+        </section>
     </main>
+    <!-- footer -->
     <footer>
 
     </footer>
