--- a/index.html
+++ b/index.html
@@ -21,18 +21,92 @@
 
     <!-- MAIN -->
     <main>
-        <section class="main-top-fixed">
-            <div class="main-top">
+        <section>
+            <div class="main-top-fixed">
                 <button class="upgrade uppercase">effettua l'upgrade</button>
             </div>
         </section>
-        <section class="prova">
-            <div></div>
+       <section>
+           <div class="invisible"></div>
+       </section>
+       <section id="categorie">
+               <ul class="container-flex uppercase">
+                   <li><a href="">in evidenza</a>
+                        <hr>
+                    </li>
+                   <li><a href="">podcast</a></li>
+                   <li><a href="">classifiche</a></li>
+                   <li><a href="">generi e mood</a></li>
+                   <li><a href="">nuove uscite</a></li>
+                   <li><a href="">scopri</a></li>
+               </ul>
+       </section>
+       <section id="playlist">
+        <div class="container-flex">
+            <h3>Recently played</h3>
+        </div>
+        <section id="cards">
+            <div class="container-flex">
+                <div class="playlist">
+                    <div class="card"></div>
+                    <h5><a href="">Heavy Metal</a></h5>
+                    <span>Subtitle</span>
+                </div>
+                <div class="playlist">
+                    <div class="card"></div>
+                    <h5><a href="">Stranger Things, Vol.1(a Netflix Original Series Soundtrack)</a></h5>
+                    <span>Kyle Dixon & Michael Stein</span>
+                </div>
+                <div class="playlist">
+                    <div class="card"></div>
+                    <h5><a href="">A quiet place</a> </h5>
+                    <span>Subtitle</span>
+                </div>
+                <div class="playlist">
+                    <div class="card"></div>
+                    <h5><a href="">Split</a></h5>
+                    <span>Subtitle</span>
+                </div>
+                <div class="playlist">
+                    <div class="card"></div>
+                    <h5><a href="">A cure of wellness</a></h5>
+                    <span>Subtitle</span>
+                </div>
+                <div class="playlist">
+                    <div class="card"></div>
+                    <h5><a href="">Sinister</a></h5>
+                    <span>Subtitle</span>
+                </div>
+            </div>
         </section>
+        <section id="playlist_2">
+            <div class="container-flex">
+                <h3>Creato per wvwall</h3>
+                <span>Più ascolti,più saranno accurati i suggerimenti.</span>
+            </div>
+        </section>
+        <section id="cards">
+            <div class="container-flex">
+                <div class="playlist">
+                    <div class="card"></div>
+                    <h5><a href="">Release Radar</a></h5>
+                </div>
+                <div class="playlist">
+                    <div class="card"></div>
+                    <h5><a href="">SDaily Mix 1</a></h5>
+                </div>
+        </section>
+       
     </main>
     <!-- footer -->
     <footer>
 
     </footer>
+
+
+
+
+
+
 </body>
 </html>
