--- a/index.html
+++ b/index.html
@@ -9,104 +9,136 @@
     <link rel="stylesheet" href="./assets/css/master.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
-    <title>wvwall_SpotifyWeb</title>
+    <title>wvwall-SpotifyWeb</title>
 </head>
 <body>
-    <!-- NAVBAR -->
-    <aside>
+    <header>
         <section>
-         <img src="./assets/img/logo_spotify.png" alt="logo esteso">
-        </section>
-    </aside>
-
-    <!-- MAIN -->
-    <main>
-        <section>
-            <div class="main-top-fixed">
+            <div class="banner-top">
                 <button class="upgrade uppercase">effettua l'upgrade</button>
             </div>
         </section>
-       <section>
-           <div class="invisible"></div>
-       </section>
-       <section id="categorie">
-               <ul class="container-flex uppercase">
-                   <li><a href="">in evidenza</a>
-                        <hr>
-                    </li>
-                   <li><a href="">podcast</a></li>
-                   <li><a href="">classifiche</a></li>
-                   <li><a href="">generi e mood</a></li>
-                   <li><a href="">nuove uscite</a></li>
-                   <li><a href="">scopri</a></li>
-               </ul>
-       </section>
-       <section id="playlist">
-        <div class="container-flex">
-            <h3>Recently played</h3>
+    </header>
+    <main>
+        <aside class="sidebar">
+            <section class="logo">
+                <i class="fab fa-spotify"></i>
+                <img src="./assets/img/logo_spotify.png" alt="logo">
+            </section>
+            <section class="home">
+                <svg viewBox="0 0 512 512" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M448 463.746h-149.333v-149.333h-85.334v149.333h-149.333v-315.428l192-111.746 192 110.984v316.19z" fill="#ffffff"></path></svg>
+                <span> Home</span>
+            </section>
+            <section class="search">
+                <svg viewBox="0 0 512 512" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M349.714 347.937l93.714 109.969-16.254 13.969-93.969-109.969q-48.508 36.825-109.207 36.825-36.826 0-70.476-14.349t-57.905-38.603-38.603-57.905-14.349-70.476 14.349-70.476 38.603-57.905 57.905-38.603 70.476-14.349 70.476 14.349 57.905 38.603 38.603 57.905 14.349 70.476q0 37.841-14.73 71.619t-40.889 58.921zM224 377.397q43.428 0 80.254-21.461t58.286-58.286 21.461-80.254-21.461-80.254-58.286-58.285-80.254-21.46-80.254 21.46-58.285 58.285-21.46 80.254 21.46 80.254 58.285 58.286 80.254 21.461z" fill="#ffffff" fill-rule="evenodd"></path></svg>
+                <span>Cerca</span>
+            </section>
+            <section class="library">
+                <svg viewBox="0 0 512 512" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M291.301 81.778l166.349 373.587-19.301 8.635-166.349-373.587zM64 463.746v-384h21.334v384h-21.334zM192 463.746v-384h21.334v384h-21.334z" fill="#ffffff"></path></svg>
+                <span>La tua libreria</span>
+            </section>
+            <section class="playlist">
+                <h5>playlist</h5>
+                <ul>
+                    <li><i class="fas fa-plus-square"></i><a href="">Crea Playlist</a></li>
+                    <li><a href="">Nuova Playlist</a></li>
+                    <li><a href="">Nuova Playlist</a></li>
+                    <li><a href="">Nuova Playlist</a></li>
+                    <li><a href="">Nuova Playlist</a></li>
+                    <li><a href="">Nuova Playlist</a></li>
+                    <li><a href="">Nuova Playlist</a></li>
+                    <li><a href="">Nuova Playlist</a></li>
+                </ul>
+            </section>
+            <section class="icon_down">
+                <section class="install">
+                    <i class="fas fa-arrow-circle-down"></i>
+                    <span>Installa app</span>
+                    <hr>
+                </section>
+                <section class="user">
+                    <i class="fas fa-user"></i>
+                    <span>wvwall</span>
+                 </section>
+            </section>
+        </aside>
+        <div role="app-content">
+            <section>
+                <div class="invisible"></div>
+            </section>
+            <section id="categorie">
+                <ul class="container-flex uppercase">
+                    <li><a href="">in evidenza</a>
+                         <hr>
+                     </li>
+                    <li><a href="">podcast</a></li>
+                    <li><a href="">classifiche</a></li>
+                    <li><a href="">generi e mood</a></li>
+                    <li><a href="">nuove uscite</a></li>
+                    <li><a href="">scopri</a></li>
+                </ul>
+        </section>
+            
+        <section id="playlist">
+            <div class="container-flex">
+                <h3>Recently played</h3>
+            </div>
+            <section id="cards">
+                <div class="container-flex">
+                    <div class="playlist">
+                        <div class="card"></div>
+                        <h5><a href="">Heavy Metal</a></h5>
+                        <span>Subtitle</span>
+                    </div>
+                    <div class="playlist">
+                        <div class="card"></div>
+                        <h5><a href="">Stranger Things, Vol.1(a Netflix Original Series Soundtrack)</a></h5>
+                        <span>Kyle Dixon & Michael Stein</span>
+                    </div>
+                    <div class="playlist">
+                        <div class="card"></div>
+                        <h5><a href="">A quiet place</a> </h5>
+                        <span>Subtitle</span>
+                    </div>
+                    <div class="playlist">
+                        <div class="card"></div>
+                        <h5><a href="">Split</a></h5>
+                        <span>Subtitle</span>
+                    </div>
+                    <div class="playlist">
+                        <div class="card"></div>
+                        <h5><a href="">A cure of wellness</a></h5>
+                        <span>Subtitle</span>
+                    </div>
+                    <div class="playlist">
+                        <div class="card"></div>
+                        <h5><a href="">Sinister</a></h5>
+                        <span>Subtitle</span>
+                    </div>
+                </div>
+            </section>
+            <section id="playlist_2">
+                <div class="container-flex">
+                    <h3>Creato per wvwall</h3>
+                    <span>Più ascolti,più saranno accurati i suggerimenti.</span>
+                </div>
+            </section>
+            <section id="cards">
+                <div class="container-flex">
+                    <div class="playlist">
+                        <div class="card"></div>
+                        <h5><a href="">Release Radar</a></h5>
+                    </div>
+                    <div class="playlist">
+                        <div class="card"></div>
+                        <h5><a href="">SDaily Mix 1</a></h5>
+                    </div>
+            </section>
         </div>
-        <section id="cards">
-            <div class="container-flex">
-                <div class="playlist">
-                    <div class="card"></div>
-                    <h5><a href="">Heavy Metal</a></h5>
-                    <span>Subtitle</span>
-                </div>
-                <div class="playlist">
-                    <div class="card"></div>
-                    <h5><a href="">Stranger Things, Vol.1(a Netflix Original Series Soundtrack)</a></h5>
-                    <span>Kyle Dixon & Michael Stein</span>
-                </div>
-                <div class="playlist">
-                    <div class="card"></div>
-                    <h5><a href="">A quiet place</a> </h5>
-                    <span>Subtitle</span>
-                </div>
-                <div class="playlist">
-                    <div class="card"></div>
-                    <h5><a href="">Split</a></h5>
-                    <span>Subtitle</span>
-                </div>
-                <div class="playlist">
-                    <div class="card"></div>
-                    <h5><a href="">A cure of wellness</a></h5>
-                    <span>Subtitle</span>
-                </div>
-                <div class="playlist">
-                    <div class="card"></div>
-                    <h5><a href="">Sinister</a></h5>
-                    <span>Subtitle</span>
-                </div>
-            </div>
-        </section>
-        <section id="playlist_2">
-            <div class="container-flex">
-                <h3>Creato per wvwall</h3>
-                <span>Più ascolti,più saranno accurati i suggerimenti.</span>
-            </div>
-        </section>
-        <section id="cards">
-            <div class="container-flex">
-                <div class="playlist">
-                    <div class="card"></div>
-                    <h5><a href="">Release Radar</a></h5>
-                </div>
-                <div class="playlist">
-                    <div class="card"></div>
-                    <h5><a href="">SDaily Mix 1</a></h5>
-                </div>
-        </section>
-       
     </main>
-    <!-- footer -->
     <footer>
 
     </footer>
-
-
-
-
-
-
 </body>
+
 </html>
