Cambiate img playlist

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <svg viewBox="0 0 512 512" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M291.301 81.778l166.349 373.587-19.301 8.635-166.349-373.587zM64 463.746v-384h21.334v384h-21.334zM192 463.746v-384h21.334v384h-21.334z" fill="#ffffff"></path></svg>
                 <span>La tua libreria</span>
             </section>
-            <section class="playlist">
+            <section class="new_playlist">
                 <h5>playlist</h5>
                 <ul>
                     <li><i class="fas fa-plus-square"></i><a href="">Crea Playlist</a></li>
@@ -77,61 +77,98 @@
                     <li><a href="">nuove uscite</a></li>
                     <li><a href="">scopri</a></li>
                 </ul>
-        </section>
-            
-        <section id="playlist">
-            <div class="container-flex">
-                <h3>Recently played</h3>
-            </div>
-            <section id="cards">
-                <div class="container-flex">
-                    <div class="playlist">
-                        <div class="card"></div>
-                        <h5><a href="">Heavy Metal</a></h5>
-                        <span>Subtitle</span>
-                    </div>
-                    <div class="playlist">
-                        <div class="card"></div>
-                        <h5><a href="">Stranger Things, Vol.1(a Netflix Original Series Soundtrack)</a></h5>
-                        <span>Kyle Dixon & Michael Stein</span>
-                    </div>
-                    <div class="playlist">
-                        <div class="card"></div>
-                        <h5><a href="">A quiet place</a> </h5>
-                        <span>Subtitle</span>
-                    </div>
-                    <div class="playlist">
-                        <div class="card"></div>
-                        <h5><a href="">Split</a></h5>
-                        <span>Subtitle</span>
-                    </div>
-                    <div class="playlist">
-                        <div class="card"></div>
-                        <h5><a href="">A cure of wellness</a></h5>
-                        <span>Subtitle</span>
-                    </div>
-                    <div class="playlist">
-                        <div class="card"></div>
-                        <h5><a href="">Sinister</a></h5>
-                        <span>Subtitle</span>
-                    </div>
-                </div>
             </section>
+            
+            <section id="playlist">
+                <div class="container-flex">
+                    <h3>Recently played</h3>
+                </div>
+                <section id="cards">
+                    <div class="container-flex">
+                        <div class="playlist">
+                            <div class="card">
+                             <img src="./assets/img/mezzanotte.jpg" alt="mezzanotte">
+                            </div>
+                            <h5><a href="">Mezzanotte</a></h5>
+                            <span>Ghemon</span>
+                        </div>
+                        <div class="playlist">
+                            <div class="card">
+                                <img src="./assets/img/musiq.jpg" alt="musiq">
+                            </div>
+                            <h5><a href="">Juslisen</a></h5>
+                            <span>Musiq Soulchild</span>
+                        </div>
+                        <div class="playlist">
+                            <div class="card">
+                                <img src="./assets/img/banzai.jpg" alt="banzai">
+                            </div>
+                            <h5><a href="">Banzai(lato blu)</a> </h5>
+                            <span>Frah Quintale</span>
+                        </div>
+                        <div class="playlist">
+                            <div class="card">
+                                <img src="./assets/img/tedua.jpg" alt="tedua">
+                            </div>
+                            <h5><a href="">Vita Vera Mixtape</a></h5>
+                            <span>Tedua</span>
+                        </div>
+                        <div class="playlist">
+                            <div class="card">
+                                <img src="./assets/img/pinguini.jpg" alt="pinguini">
+                            </div>
+                            <h5><a href="">Fuori dall'Hype Ringo Starr</a></h5>
+                            <span>Pinguini Tattici Nucleari</span>
+                        </div>
+                        <div class="playlist">
+                            <div class="card">
+                                <img src="./assets/img/mecna.jpg" alt="mecna">
+                            </div>
+                            <h5><a href="">Neverland</a></h5>
+                            <span>Mecna</span>
+                        </div>
+                    </div>
+                </section>
             <section id="playlist_2">
                 <div class="container-flex">
                     <h3>Creato per wvwall</h3>
-                    <span>Più ascolti,più saranno accurati i suggerimenti.</span>
+                    <span>Più ascolti, più saranno accurati i suggerimenti.</span>
                 </div>
             </section>
             <section id="cards">
                 <div class="container-flex">
                     <div class="playlist">
-                        <div class="card"></div>
-                        <h5><a href="">Release Radar</a></h5>
+                        <div class="card">
+                            <img src="./assets/img/ghemon.jpg" alt="Release">
+                        </div>
+                        <h5><a href="">This is Ghemon</a></h5>
                     </div>
                     <div class="playlist">
-                        <div class="card"></div>
-                        <h5><a href="">SDaily Mix 1</a></h5>
+                        <div class="card">
+                            <img src="./assets/img/frah.jpg" alt="Mix">
+                        </div>
+                        <h5><a href="">This is Frah</a></h5>
+                    </div>
+            </section>
+            <section id="playlist_2">
+                <div class="container-flex">
+                    <h3>Artisti più popolari</h3>
+                    <span>Più ascolti, più saranno accurati i suggerimenti.</span>
+                </div>
+            </section>
+            <section id="cards">
+                <div class="container-flex">
+                    <div class="playlist">
+                        <div class="card br">
+                            <img src="./assets/img/sfera.jpg" alt="Release">
+                        </div>
+                        <h5><a href="">Sfera Ebbasta</a></h5>
+                    </div>
+                    <div class="playlist">
+                        <div class="card br">
+                            <img src="./assets/img/mam.jpg" alt="Mix">
+                        </div>
+                        <h5><a href="">Mahmood</a></h5>
                     </div>
             </section>
         </div>
