--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
                     <div class="container-flex">
                         <div class="playlist">
                             <div class="card br">
-                             <img src="./assets/img/mezzanotte.jpg" alt="mezzanotte">
+                                <i class="far fa-play-circle hover-plus"></i>
+                                <img src="./assets/img/mezzanotte.jpg" alt="mezzanotte">
                             </div>
                             <h5><a href="">Mezzanotte</a></h5>
                             <span>Ghemon</span>
                         </div>
                         <div class="playlist">
                             <div class="card br">
+                                <i class="far fa-play-circle hover-plus"></i>
                                 <img src="./assets/img/musiq.jpg" alt="musiq">
                             </div>
                             <h5><a href="">Juslisen</a></h5>
@@ -103,6 +105,7 @@
                         </div>
                         <div class="playlist">
                             <div class="card br">
+                                <i class="far fa-play-circle hover-plus"></i>
                                 <img src="./assets/img/banzai.jpg" alt="banzai">
                             </div>
                             <h5><a href="">Banzai(lato blu)</a> </h5>
@@ -110,6 +113,7 @@
                         </div>
                         <div class="playlist">
                             <div class="card br">
+                                <i class="far fa-play-circle hover-plus"></i>
                                 <img src="./assets/img/pinguini.jpg" alt="pinguini">
                             </div>
                             <h5><a href="">Fuori dall'Hype Ringo Starr</a></h5>
@@ -117,6 +121,7 @@
                         </div>
                         <div class="playlist">
                             <div class="card br">
+                                <i class="far fa-play-circle hover-plus"></i>
                                 <img src="./assets/img/tedua.jpg" alt="tedua">
                             </div>
                             <h5><a href="">Vita Vera Mixtape</a></h5>
@@ -124,6 +129,7 @@
                         </div>
                         <div class="playlist">
                             <div class="card br">
+                                <i class="far fa-play-circle hover-plus"></i>
                                 <img src="./assets/img/mecna.jpg" alt="mecna">
                             </div>
                             <h5><a href="">Neverland</a></h5>
@@ -199,10 +205,14 @@
                     <i class="far fa-play-circle"></i>
                     <i class="fas fa-step-forward"></i>
                     <i class="fas fa-redo-alt"></i>
-                </div>                
+                </div>
+                <div class="container_prog">  
+                    <span>1:45</span>            
                     <div class="progress_bar">
                         <div></div>
                     </div>
+                    <span>4:45</span>  
+                </div>  
             </div>
             <div class="volume_player">
                 <a href=""><i class="fas fa-list-ul"></i></a>
